@@ -13,13 +13,10 @@ import java.time.OffsetDateTime;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.Random;
 import java.util.Set;
+import java.util.concurrent.atomic.AtomicLong;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-
-
-import static java.util.stream.Collectors.toList;
 
 @Component
 public class WorkerDataSetup {
@@ -42,20 +39,20 @@ public class WorkerDataSetup {
         domainObjects.add(object);
     }
 
-    Random randomGenerator = new Random();
+    private static final AtomicLong contractIdCounter = new AtomicLong(20000L);
 
     public void cleanup() {
 
-        List<Job> jobsToDelete = domainObjects.stream().filter(object -> object instanceof Job)
-                .map(object -> (Job) object).collect(toList());
+        List<Job> jobsToDelete = domainObjects.stream().filter(Job.class::isInstance)
+                .map(Job.class::cast).toList();
         jobsToDelete.forEach(job -> {
             job = jobRepository.findByJobUuid(job.getJobUuid());
             jobRepository.delete(job);
             jobRepository.flush();
         });
 
-        List<PdpClient> clientsToDelete = domainObjects.stream().filter(object -> object instanceof PdpClient)
-                .map(object -> (PdpClient) object).collect(toList());
+        List<PdpClient> clientsToDelete = domainObjects.stream().filter(PdpClient.class::isInstance)
+                .map(PdpClient.class::cast).toList();
         clientsToDelete.forEach(pdpClient -> {
             pdpClient = pdpClientRepository.findByClientId(pdpClient.getClientId());
 
@@ -65,8 +62,8 @@ public class WorkerDataSetup {
             }
         });
 
-        List<Role> rolesToDelete = domainObjects.stream().filter(object -> object instanceof Role)
-                .map(object -> (Role) object).collect(toList());
+        List<Role> rolesToDelete = domainObjects.stream().filter(Role.class::isInstance)
+                .map(Role.class::cast).toList();
         rolesToDelete.forEach(role -> {
             Optional<Role> roleOptional = roleRepository.findRoleByName(role.getName());
 
@@ -76,8 +73,6 @@ public class WorkerDataSetup {
             }
         });
 
-        List<Contract> contractsToDelete = domainObjects.stream().filter(object -> object instanceof Contract)
-                .map(object -> (Contract) object).collect(toList());
         contractServiceStub.reset();
 
         domainObjects.clear();
@@ -96,7 +91,7 @@ public class WorkerDataSetup {
         contract.setContractNumber(contractNumber);
         contract.setAttestedOn(attestedOn);
         queueForCleanup(contract);
-        contract.setId(randomGenerator.nextLong(200L, 400L));
+        contract.setId(contractIdCounter.getAndIncrement());
         return contract;
     }
 }
